# pmu

./: CMakeLists.txt  pmu.cc
include/: pmu.h
install/include/: pmu.h
results/: cbw_1024.csv  cbw_1024_sve.csv  cbw_128.csv  cbw_128_sve.csv  cbw_2048.csv  cbw_2048_sve.csv  cbw_32.csv  cbw_32_sve.csv  cbw_4096.csv  cbw_4096_sve.csv  cbw_512.csv  cbw_512_sve.csv  cbw_64.csv  cbw_64_sve.csv  stream.csv  stream_sve.csv
scripts/: a64fx_hw.py  perf.py
